# src/main/resources/openapi.yml
@@ -22,6 +22,8 @@ tags:
     description: Collaborator specific API
   - name: Request
     description: Request specific API
+  - name: Template
+    description: Template specific API
 
 paths:
 
@@ -143,6 +145,31 @@ paths:
           description: Project not found
 
 #Media
+  /media:
+    put:
+      tags:
+        - Media
+      summary: Edit a Media.
+      operationId: editMedia
+      description: Edit an existing Media.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Media'
+      responses:
+        '201':
+          description: Media edited successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Media'
+        '400':
+          description: Bad Request - Invalid fields
+        '404':
+          description: Not Found - Media id not found
+
   /media/{projectId}:
     get:
       tags:
@@ -962,6 +989,142 @@ paths:
         '404':
           description: Request not found
 
+#Template
+  /template:
+    post:
+      tags:
+        - Template
+      summary: Creates a Template
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Template'
+      responses:
+        '200':
+          description: The created Template
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Template'
+        '403':
+          description: Forbidden - Template name already in use
+    get:
+      tags:
+        - Template
+      summary: Retrieves all Templates
+      responses:
+        '200':
+          description: The list of Templates
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Template'
+
+  /template/{templateName}:
+    get:
+      tags:
+        - Template
+      summary: Retrieves a Template
+      parameters:
+        - name: templateName
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: The Template searched
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Template'
+        '404':
+          description: Not Found - Template could not be found
+    delete:
+      tags:
+        - Template
+      summary: Deletes a Template
+      parameters:
+        - name: templateName
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Deletion status
+        '404':
+          description: Not Found - Template could not be found
+    post:
+      tags:
+        - Template
+      summary: Adds a Template Addition
+      parameters:
+        - name: templateName
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TemplateAddition'
+      responses:
+        '200':
+          description: The added Template Addition
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TemplateAddition'
+        '404':
+          description: Not Found - Template could not be found
+
+  /template/{templateAdditionId}:
+    delete:
+      tags:
+        - Template
+      summary: Deletes a Template Addition
+      parameters:
+        - name: templateAdditionId
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Deletion status
+        '404':
+          description: Not Found - Template Addition could not be found
+
+  /template/additions/{templateName}:
+    get:
+      tags:
+        - Template
+      summary: Retrieves all Template Additions for a Template
+      parameters:
+        - name: templateName
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: The list of Template Additions
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/TemplateAddition'
+        '404':
+          description: Not Found - Template could not be found
 
 components:
   schemas:
@@ -1010,6 +1173,8 @@ components:
           type: string
         path:
           type: string
+        project:
+          $ref: '#/components/schemas/Project'
 
     Link:
       type: object
@@ -1021,6 +1186,8 @@ components:
           type: string
         url:
           type: string
+        project:
+          $ref: '#/components/schemas/Project'
 
     Request:
       type: object
@@ -1086,3 +1253,30 @@ components:
           format: uuid
         name:
           type: string
+
+    Template:
+      type: object
+      properties:
+        templateName:
+          type: string
+        standardDescription:
+          type: string
+        standardBibtex:
+          type: string
+        numberOfCollaborators:
+          type: integer
+        account:
+          $ref: '#/components/schemas/Account'
+
+    TemplateAddition:
+      type: object
+      properties:
+        templateAdditionId:
+          type: string
+          format: uuid
+        templateAdditionName:
+          type: string
+        isMedia:
+          type: boolean
+        template:
+          $ref: '#/components/schemas/Template'
